--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div [ngClass]="themeService.themeSignal()">
+    <app-header></app-header>
+    <div class="content">
+    <router-outlet></router-outlet>
+    </div>
+</div>
+
+
+
