--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -9,8 +9,12 @@
     <mat-form-field>
       <mat-label>Département</mat-label>
       <mat-select>
-        <mat-option value="one">First option</mat-option>
-        <mat-option value="two">Second option</mat-option>
+        @for (department of departments; track department.id) {
+          <mat-option>{{department.id}} - {{department.name}}</mat-option>
+        }
+        @empty {
+          <mat-option>Aucun département trouvé</mat-option>
+        }
       </mat-select>
     </mat-form-field>
     <mat-radio-group aria-label="Select an option">
@@ -21,12 +25,3 @@
     <button mat-raised-button color="primary">Valider</button>
   </div>
   </mat-card>
-  <!-- br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>-->
